--- a/client.html
+++ b/client.html
@@ -4,56 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Royaloli</title>
-
-        <style>
-#screen {
-    border: 10px solid #CCC;
-    image-rendering: pixelated;
-    image-rendering: crisp-edges;
-    image-rendering: -moz-crisp-edges;
-    width: 400px;
-    height: 400px;
-}
-        </style>
-
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <canvas id="screen" height="10" width="10"></canvas>
+        <main>
+            <canvas id="screen" height="10" width="10"></canvas>
+        </main>
 
-        <script>
-            const screen = document.getElementById('screen')
-            const context = screen.getContext('2d')
-
-            const game = {
-                players: {
-                    'player1' : { x: 1, y: 1 },
-                    'player2' : { x: 9, y: 9 }
-                },
-                fruits: {
-                    'fruit1' : {x: 3, y: 1}
-                }
-            }
-            renderScreen()
-
-            function renderScreen()
-            {
-                context.fillStyle = 'white'
-                context.fillRect(0, 0, 10, 10)
-                for ( playerId in game.players )
-                {
-                    const player = game.players[playerId]
-                    context.fillStyle = 'black'
-                    context.fillRect(player.x, player.y, 1, 1)
-                }
-
-                for ( fruitId in game.fruits )
-                {
-                    const fruit = game.fruits[fruitId]
-                    context.fillStyle = 'green'
-                    context.fillRect(fruit.x, fruit.y, 1, 1 )
-                }
-                requestAnimationFrame(renderScreen)
-            }
-        </script>
+        <script src="royaloli.js"></script>
     </body>
 </html>
