--- a/playgroud/public/index.html
+++ b/playgroud/public/index.html
@@ -41,6 +41,18 @@
             socket.on('setup', (state) => {
                 game.setState(state)
             })
+
+            socket.on('add-player', (command) => {
+                console.log(`Receiving ${command.type} -> ${command.PlayerId}`)
+                game.addPlayer(command)
+            })
+
+
+            socket.on('remove-player', (command) => {
+                console.log(`Receiving ${command.type} -> ${command.PlayerId}`)
+                game.removePlayer(command)
+            })
+
         </script>
     </body>
 </html>
