fix undefined when add-player is triggered

--- a/playgroud/public/index.html
+++ b/playgroud/public/index.html
@@ -46,7 +46,7 @@
             })
 
             socket.on('add-player', (command) => {
-                console.log(`Receiving ${command.type} -> ${command.PlayerId}`)
+                console.log(`Receiving ${command.type} -> ${command.playerId}`)
                 game.addPlayer(command)
             })
 
