syncronize clients and add fruits dynamically

--- a/playgroud/public/index.html
+++ b/playgroud/public/index.html
@@ -34,7 +34,7 @@
                 const playerId = socket.id
                 console.log(`player connected on client with id ${playerId}`)
 
-
+                
                 const screen = document.getElementById("screen")
                 renderScreen(screen, game, requestAnimationFrame, playerId)
             })
@@ -45,6 +45,9 @@
 
                 keyBoardListener.registerPlayerId(playerId)
                 keyBoardListener.subscribe(game.movePlayer)
+                keyBoardListener.subscribe((command) => {
+                    socket.emit('move-player', command)
+                })
             })
 
             socket.on('add-player', (command) => {
@@ -53,8 +56,28 @@
             })
 
             socket.on('remove-player', (command) => {
-                console.log(`Receiving ${command.type} -> ${command.PlayerId}`)
+                console.log(`Receiving ${command.type} -> ${command.playerId}`)
                 game.removePlayer(command)
+            })
+
+            socket.on('move-player', (command) => {
+                console.log(`Receiving ${command.type} -> ${command.playerId}`)
+                console.log('1')
+                const playerId = socket.id
+                
+                if (playerId !== command.playerId) {
+                    game.movePlayer(command)
+                }
+            })
+
+            socket.on('add-fruit', (command) => {
+                console.log(`Receiving ${command.type} -> ${command.fruitId}`)
+                game.addFruit(command)
+            })
+
+            socket.on('remove-fruit', (command) => {
+                console.log(`Receiving ${command.type} -> ${command.fruitId}`)
+                game.remove-fruit(command)
             })
 
         </script>
